--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Adopt me</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root"></div>
     <script src="App.js"></script>
   </body>
